fixes for modern skin (better readability)
git-svn-id: http://scarab.tigris.org/svn/scarab@11263 3c7165bb-d2ef-0310-b724-bafd9a86081f

--- a/branches/scarab_11079_legacy_with_ant_maven1/src/webapp/skins/classic.css
+++ b/branches/scarab_11079_legacy_with_ant_maven1/src/webapp/skins/classic.css
@@ -81,7 +81,7 @@
 #scb_banner {
     font-size: 1.25em;
     border-top: 1px solid #369;
-    background-color: #036;
+    background-color: #5a1b1b;
     color: #fff;
 }
 
